# routes.py
@@ -1,5 +1,4 @@
 from flask import request, jsonify
-from models.database import db
 from models.electro_scooter import ElectroScooter
 from __main__ import app
 
@@ -10,9 +9,7 @@ def create_electro_scooter():
         data = request.get_json()
         name = data['name']
         battery_level = data['battery_level']
-        electro_scooter = ElectroScooter(name=name, battery_level=battery_level)
-        db.session.add(electro_scooter)
-        db.session.commit()
+        electro_scooter = ElectroScooter.create(name, battery_level)
         return jsonify({"message": "Electro Scooter created successfully"}), 201
     except KeyError:
         return jsonify({"error": "Invalid request data"}), 400
@@ -20,8 +17,8 @@ def create_electro_scooter():
 
 @app.route('/api/electro-scooters/<int:scooter_id>', methods=['GET'])
 def get_electro_scooter_by_id(scooter_id):
-    scooter = ElectroScooter.query.get(scooter_id)
-    if scooter is not None:
+    scooter = ElectroScooter.get_by_id(scooter_id)
+    if scooter:
         return jsonify({
             "id": scooter.id,
             "name": scooter.name,
@@ -33,34 +30,27 @@ def get_electro_scooter_by_id(scooter_id):
 
 @app.route('/api/electro-scooters/<int:scooter_id>', methods=['PUT'])
 def update_electro_scooter(scooter_id):
-    try:
-        scooter = ElectroScooter.query.get(scooter_id)
-        if scooter is not None:
-            data = request.get_json()
-            scooter.name = data.get('name', scooter.name)
-            scooter.battery_level = data.get('battery_level', scooter.battery_level)
-            db.session.commit()
-            return jsonify({"message": "Electro Scooter updated successfully"}), 200
-        else:
-            return jsonify({"error": "Electro Scooter not found"}), 404
-    except Exception as e:
-        return jsonify({"error": str(e)}), 500
+    scooter = ElectroScooter.get_by_id(scooter_id)
+    if scooter:
+        data = request.get_json()
+        scooter.name = data.get('name', scooter.name)
+        scooter.battery_level = data.get('battery_level', scooter.battery_level)
+        scooter.update()
+        return jsonify({"message": "Electro Scooter updated successfully"}), 200
+    else:
+        return jsonify({"error": "Electro Scooter not found"}), 404
 
 
 @app.route('/api/electro-scooters/<int:scooter_id>', methods=['DELETE'])
 def delete_electro_scooter(scooter_id):
-    try:
-        scooter = ElectroScooter.query.get(scooter_id)
-        if scooter is not None:
-            # Get the password from the request headers
-            password = request.headers.get('X-Delete-Password')
-            if password == '123':
-                db.session.delete(scooter)
-                db.session.commit()
-                return jsonify({"message": "Electro Scooter deleted successfully"}), 200
-            else:
-                return jsonify({"error": "Incorrect password"}), 401
+    scooter = ElectroScooter.get_by_id(scooter_id)
+    if scooter:
+        # Get the password from the request headers
+        password = request.headers.get('X-Delete-Password')
+        if password == '123':
+            scooter.delete()
+            return jsonify({"message": "Electro Scooter deleted successfully"}), 200
         else:
-            return jsonify({"error": "Electro Scooter not found"}), 404
-    except Exception as e:
-        return jsonify({"error": str(e)}), 500
+            return jsonify({"error": "Incorrect password"}), 401
+    else:
+        return jsonify({"error": "Electro Scooter not found"}), 404
